# neat

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  API.md  CMakeLists.txt  License  README.md  autogen.sh  build-deb  build-rpm  clean-deb  cmake_uninstall.cmake.in  cppcheck.sh  debian.conf  filter-debian-changelog  libneat.lsm  make-deb  make-ppa  make-rpm  make-srpm  make-symbols  make-upstream-package  merge-debian-changelogs  neat.h  neat_addr.c  neat_addr.h  neat_api.c  neat_api.h  neat_bsd.c  neat_bsd.h  neat_bsd_internal.h  neat_core.c  neat_core.h  neat_freebsd.c  neat_freebsd.h  neat_freebsd_internal.h  neat_he.c  neat_he.h  neat_internal.h  (+46 more)
bb-multi-prefix/: CMakeLists.txt  README.md  neat.h  neat_addr.c  neat_addr.h  neat_core.c  neat_core.h  neat_example.c  neat_linux.c  neat_linux.h  neat_linux_internal.h  neat_resolver.c  neat_resolver.h
ci/: before-install  build  build-tool  ci-build  ci-install  ci-setup  ci-test  get-container  get-dependencies  install  run-test  test
debian/: README.md  changelog  control  copyright  libneat-dev.examples  libneat-dev.install  libneat-examples.install  libneat-examples.lintian-overrides  libneat-socketapi-dev.install  libneat-socketapi-examples.install  libneat-socketapi-examples.lintian-overrides  libneat-socketapi-withneat.install  libneat-socketapi0.install  libneat0.install  neat-tools.install  rules  watch
doc/: INDEX.md  README.md  buildbot.md  callb.on_aborted.md  callb.on_all_written.md  callb.on_close.md  callb.on_connected.md  callb.on_error.md  callb.on_network_changed.md  callb.on_rate_hint.md  callb.on_readable.md  callb.on_send_failure.md  callb.on_slowdown.md  callb.on_timeout.md  callb.on_writable.md  features.md  func.neat_abort.md  func.neat_accept.md  func.neat_change_timeout.md  func.neat_close.md  func.neat_free_ctx.md  func.neat_free_flow.md  func.neat_get_backend_fd.md  func.neat_get_property.md  func.neat_init_ctx.md  func.neat_new_flow.md  func.neat_open.md  func.neat_read.md  func.neat_request_capacity.md  func.neat_set_operations.md  func.neat_set_primary_dest.md  func.neat_set_property.md  func.neat_shutdown.md  func.neat_start_event_loop.md  func.neat_stop_event_loop.md  func.neat_write.md  properties.md
docs/: README  arch.md  callbacks.md  conf.py  errors.md  index.rst  neat_abort.md  neat_accept.md  neat_change_timeout.md  neat_close.md  neat_free_ctx.md  neat_get_backend_fd.md  neat_get_backend_timeout.md  neat_get_event_loop.md  neat_get_property.md  neat_get_qos.md  neat_get_stats.md  neat_getlpaddrs.md  neat_init_ctx.md  neat_log_file.md  neat_log_level.md  neat_new_flow.md  neat_open.md  neat_read.md  neat_secure_identity.md  neat_set_checksum_coverage.md  neat_set_ecn.md  neat_set_operations.md  neat_set_primary_dest.md  neat_set_property.md  neat_set_qos.md  neat_shutdown.md  neat_start_event_loop.md  neat_stop_event_loop.md  neat_write.md  optargs.md  properties.md  tutorial.md
examples/: CMakeLists.txt  README.md  all.json  cert.pem  client.c  client_data.c  client_dtls_echo.c  client_http_get.c  client_http_run_once.c  client_https_get.c  client_mptcp_http_get.c  client_multi.c  client_timeout_test.c  datagrams.json  default.json  dscp_test.c  dtls_udp_echo.c  dtlsbuild.sh  gyropi.cpp  gyropi.h  http_client_multihomed.c  minimal_client.c  minimal_server.c  minimal_server.py  minimal_server2.c  msbench.c  neat_server.c  peer.c  peer_webrtc.c  peer_webrtc_signaling.c  picohttpparser.c  prop_all.json  prop_datagram.json  prop_default.json  prop_message_mode.json  prop_mptcp.json  prop_sctp.json  prop_sctp_delayed.json  prop_sctp_dtls.json  prop_sctp_multihomed.json  (+24 more)
examples/python/: minimal_client.py  minimal_server.py
policy/: README.md  cib.py  neat_policy_example.ipynb  neatpmd  neatpmd.py  neatpmd_init.sh  pib.py  pmconst.py  pmdefaults.py  pmhelper.py  pmrest.py  pmtests.py  policy.py  (+4 more)
policy/c/: CMakeLists.txt  README.md  cib.c  cib.h  func.c  func.h  neat_pm.service.in  node.c  node.h  opts.c  opts.h  parse_json.c  parse_json.h  pib.c  pib.h  pm.c  pm_helper.c  pm_helper.h  pm_utils.c  pm_utils.h  rest.c  rest.h  version.h
policy/c/json_examples/pib/: low_latency_tcp.profile
samples/: CMakeLists.txt  README.md  client.c  neat_basic.c  neat_basic_sctp.c  neat_basic_usrsctp.c  neat_http_get.c  neat_resolver_example.c  neat_server.c  neat_usrsctp_server.c  selftest.c  server_chargen.c  server_daytime.c  server_discard.c  server_discard_echo.c  server_echo.c  tneat.c
socketapi/: CMakeLists.txt  TODO  debug.helgrind  debug.memcheck  eventsignal.c  eventsignal.h  find-socket-functions  identifierbitmap.c  identifierbitmap.h  neat-socket.c  neat-socket.h  neat-socketapi-file.c  neat-socketapi-internals.c  neat-socketapi-internals.h  neat-socketapi-io.c  neat-socketapi-poll.c  neat-socketapi.c  neat-socketapi.h  notificationqueue.c  notificationqueue.h  redblacktree.c  redblacktree.h  replace-socket-functions  t1.cc  t2.cc
socketapi/docs/: ANRW2017.xml  ComNets2013-Core.xml  Haikou2017-2-NEAT-Tutorial.xml  Haikou2017-NEAT.xml  LinuxCon2016.xml  Makefile  NEAT-D1.1.xml  NEAT-D1.2.xml  NEAT-D1.3.xml  NEAT-D2.1.xml  NEAT-D2.2.xml  NEAT-D2.3.xml  NEAT-Website.xml  NorNet-Website.xml  draft-dreibholz-taps-neat-socketapi.xml  reference.I-D.fairhurst-taps-neat.xml
socketapi/examples/: CMakeLists.txt  README  ansireset.cc  ansistyle.h  httpget.cc  httpserver1.cc  httpserver2-select.cc  httpserver2-threads.cc  index.html  make-certificate  mutex.cc  mutex.h  neat-example.config  run-client  run-server  safeprint.cc  safeprint.h  stop-server  stylesheet.css  test.html  thread.cc  thread.h
socketapi/examples/web-example-images/: fetch-example-images
socketapi/scripts/: README  find-socket-functions  neatify-source-file  replace-socket-functions
socketapi/withneat/: CMakeLists.txt  libwithneat.c  run-with-neat.in  t1.cc
tests/: CMakeLists.txt  dscp_failover_preload.c  neat.supp  neat_basic_sctp.c  neat_property_api_test.c  neat_resolver_example.c  run.py  run.sh  run_echo_test.sh  run_old.sh  test_close.c  test_echo.c  test_echo.sh  udp_test.sh  valgrind.suppressions
(+92 files in other folders)
